# echo

./: .gitignore  .gitmodules  LICENSE  README.md  echo  process-compose.yaml  pyproject.toml  run.sh
.github/workflows/: update-submodules.yml
services/avatar/assets/models/Roboto/Roboto/: Roboto.cdi3.json  Roboto.moc3  Roboto.model3.json  Roboto.physics3.json
services/common/: pyproject.toml
services/common/echo_common/: __init__.py  errors.py  log.py  meta.py  paths.py  text.py
