[project]
name = "ai-vtuber"
version = "0.1.0"
description = "Echo AI VTuber monorepo"
requires-python = ">=3.11"
dependencies = [
    "avatar",
    "llm",
    "memory",
    "stt",
    "tts",
]

[tool.uv.workspace]
members = [
    "services/avatar/src",
    "services/llm/src",
    "services/memory/src",
    "services/stt/src",
    "services/tts/src",
]

[tool.uv.sources]
avatar = { workspace = true }
llm = { workspace = true }
memory = { workspace = true }
stt = { workspace = true }
tts = { workspace = true }
