[project]
name = "echo-common"
version = "0.1.0"
description = "Shared utilities for echo services"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mistune>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echo_common"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
